test/corpus/reference_fixes.txt
==================
enum base and item values
==================
type E = enum (uint8) {
  draw = 74
  select
}
---

(program
  (typeDecl
    (typeDeclItem
      (ident)
      (type
        (enumType
          (type
            (ident))
          (enumItem
            (ident)
            (decNumber))
          (enumItem
            (ident)))))))

==================
number separators and exponents
==================
var a: int = 100_000_000
var b: int = 0X_FF
var c: real = 2.6e-5
var d: real = 7e+8
---

(program
  (varDecl
    (fullVarDecl
      (varDeclItem
        (typedIdentList
          (identList
            (ident))
          (type
            (ident)))
        (decNumber))))
  (varDecl
    (fullVarDecl
      (varDeclItem
        (typedIdentList
          (identList
            (ident))
          (type
            (ident)))
        (hexNumber))))
  (varDecl
    (fullVarDecl
      (varDeclItem
        (typedIdentList
          (identList
            (ident))
          (type
            (ident)))
        (realNumber))))
  (varDecl
    (fullVarDecl
      (varDeclItem
        (typedIdentList
          (identList
            (ident))
          (type
            (ident)))
        (realNumber)))))

==================
recursive unary operators
==================
fn main() {
  q = ~~n
  r = !-ok
}
---

(program
  (fnDef
    (fnDecl
      (ident)
      (signature
        (parameterList)))
    (block
      (listStmt
        (ident)
        (inferredExprList
          (factor
            (factor
              (ident)))))
      (listStmt
        (ident)
        (inferredExprList
          (factor
            (factor
              (ident))))))))

==================
character literal escapes
==================
const a = 'x'
const b = '\n'
const c = '\xFF'
const d = '\\'
const e = '\''
---

(program
  (constDecl
    (constDeclItem
      (ident)
      (charLiteral)))
  (constDecl
    (constDeclItem
      (ident)
      (charLiteral
        (escSeq))))
  (constDecl
    (constDeclItem
      (ident)
      (charLiteral
        (escSeq))))
  (constDecl
    (constDeclItem
      (ident)
      (charLiteral
        (escSeq))))
  (constDecl
    (constDeclItem
      (ident)
      (charLiteral
        (escSeq)))))

==================
keywords are not identifiers
==================
var if: int
type for = int
---

(program
  (ERROR
    (ERROR
      (ident)
      (ident))
    (ident)))

==================
invalid character literals
==================
var a: char = ''
var b: char = 'ab'
var c: char = '\q'
---

(program
  (ERROR
    (typedIdentList
      (identList
        (ident))
      (type
        (ident))))
  (varDecl
    (fullVarDecl
      (varDeclItem
        identifiers: (typedIdentList
          (identList
            (ident))
          (type
            (ident)))
        value: (charLiteral
          (ERROR
            (ident))))))
  (varDecl
    (fullVarDecl
      (varDeclItem
        identifiers: (typedIdentList
          (identList
            (ident))
          (type
            (ident)))
        value: (charLiteral
          (ERROR
            (ident)))))))

==================
incomplete for header recovers at semicolon boundary
==================
fn main() {
  for c

  for c < 100 {
  }
}
---

(program
  (fnDef
    (fnDecl
      (ident)
      (signature
        (parameterList)))
    (block
      (incompleteForStmt
        (forHeader
          (ident)))
      (forStmt
        (forHeader
          (binExpr
            (ident)
            (decNumber)))
        (block)))))

==================
incomplete if header recovers at semicolon boundary
==================
fn main() {
  if x

  for c < 100 {
  }
}
---

(program
  (fnDef
    (fnDecl
      (ident)
      (signature
        (parameterList)))
    (block
      (incompleteIfStmt
        (ident))
      (forStmt
        (forHeader
          (binExpr
            (ident)
            (decNumber)))
        (block)))))

==================
partial enum literal does not consume next line
==================
y := .
x := a
---

(program
  (varDecl
    (declAssignmentStmt
      (identList
        (ident))
      (exprList
        (enumLiteral))))
  (varDecl
    (declAssignmentStmt
      (identList
        (ident))
      (exprList
        (ident)))))

==================
incomplete switch header recovers at semicolon boundary
==================
fn main() {
  switch x
  y := a
}
---

(program
  (fnDef
    (fnDecl
      (ident)
      (signature
        (parameterList)))
    (block
      (incompleteSwitchStmt
        (exprSwitchStmtHeader
          (ident)))
      (varDecl
        (declAssignmentStmt
          (identList
            (ident))
          (exprList
            (ident)))))))

==================
incomplete type switch header recovers at semicolon boundary
==================
fn main() {
  switch x := type(a)
  y := a
}
---

(program
  (fnDef
    (fnDecl
      (ident)
      (signature
        (parameterList)))
    (block
      (incompleteSwitchStmt
        (typedSwitchStmtHeader
          (ident)
          (ident)))
      (varDecl
        (declAssignmentStmt
          (identList
            (ident))
          (exprList
            (ident)))))))

==================
partial selectors do not consume next line
==================
fn main() {
  y := a.
  x := a
  z := mod::
  w := a
}
---

(program
  (fnDef
    (fnDecl
      (ident)
      (signature
        (parameterList)))
    (block
      (varDecl
        (declAssignmentStmt
          (identList
            (ident))
          (exprList
            (accessDesignator
              (ident)))))
      (varDecl
        (declAssignmentStmt
          (identList
            (ident))
          (exprList
            (ident))))
      (varDecl
        (declAssignmentStmt
          (identList
            (ident))
          (exprList
            (moduleIdent
              (ident)))))
      (varDecl
        (declAssignmentStmt
          (identList
            (ident))
          (exprList
            (ident)))))))
